Parser/y.output
Terminals unused in grammar

    AND
    OR


Grammar

    0 $accept: program $end

    1 program: entry '(' ')' '{' body return '}'

    2 entry: datatype ID

    3 datatype: INT
    4         | FLOAT
    5         | CHAR
    6         | BOOL

    7 body: block body
    8     | ε

    9 $@1: ε

   10 block: WHILE $@1 '(' condition ')' '{' body '}'

   11 $@2: ε

   12 block: IF $@2 '(' condition ')' '{' body '}' else
   13      | statement ';'

   14 $@3: ε

   15 block: PRINTFF $@3 '(' printparam ')' ';'

   16 $@4: ε

   17 block: SCANFF $@4 '(' STR ',' '&' ID ')' ';'

   18 printparam: valcharbool
   19           | STR

   20 $@5: ε

   21 else: ELSE $@5 '{' body '}'
   22     | ε

   23 condition: valcharbool relop valcharbool

   24 $@6: ε

   25 condition: TRUE $@6

   26 $@7: ε

   27 condition: FALSE $@7

   28 $@8: ε

   29 statement: DECLARE datatype ID $@8 init

   30 $@9: ε

   31 statement: ID $@9 '=' expression

   32 $@10: ε

   33 statement: ID $@10 relop expression

   34 init: '=' charbool
   35     | '=' expression

   36 expression: expression addops term
   37           | term

   38 term: term mulops factor
   39     | factor

   40 factor: base exponent base
   41       | LOG '(' value ',' value ')'
   42       | base

   43 base: value
   44     | '(' expression ')'

   45 exponent: POW

   46 mulops: MULTIPLY
   47       | DIVIDE

   48 addops: ADD
   49       | SUBTRACT

   50 relop: LT
   51      | GT
   52      | LTE
   53      | GTE
   54      | EQ
   55      | NE

   56 value: NUMBER
   57      | FLOAT_NUM
   58      | ID

   59 charbool: bools
   60         | CHARACTER

   61 valcharbool: value
   62            | charbool

   63 bools: TRUE
   64      | FALSE

   65 $@11: ε

   66 return: RETURN $@11 valcharbool ';'
   67       | ε


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 17
    '(' (40) 1 10 12 15 17 41 44
    ')' (41) 1 10 12 15 17 41 44
    ',' (44) 17 41
    ';' (59) 13 15 17 66
    '=' (61) 31 34 35
    '{' (123) 1 10 12 21
    '}' (125) 1 10 12 21
    error (256)
    PRINTFF <nd_obj> (258) 15
    SCANFF <nd_obj> (259) 17
    IF <nd_obj> (260) 12
    ELSE <nd_obj> (261) 21
    WHILE <nd_obj> (262) 10
    RETURN <nd_obj> (263) 66
    DECLARE <nd_obj> (264) 29
    ADD <nd_obj> (265) 48
    SUBTRACT <nd_obj> (266) 49
    MULTIPLY <nd_obj> (267) 46
    DIVIDE <nd_obj> (268) 47
    LOG <nd_obj> (269) 41
    POW <nd_obj> (270) 45
    GTE <nd_obj> (271) 53
    LTE <nd_obj> (272) 52
    GT <nd_obj> (273) 51
    LT <nd_obj> (274) 50
    EQ <nd_obj> (275) 54
    NE <nd_obj> (276) 55
    TRUE <nd_obj> (277) 25 63
    FALSE <nd_obj> (278) 27 64
    AND <nd_obj> (279)
    OR <nd_obj> (280)
    INT <nd_obj> (281) 3
    FLOAT <nd_obj> (282) 4
    CHAR <nd_obj> (283) 5
    BOOL <nd_obj> (284) 6
    NUMBER <nd_obj> (285) 56
    FLOAT_NUM <nd_obj> (286) 57
    ID <nd_obj> (287) 2 17 29 31 33 58
    STR <nd_obj> (288) 17 19
    CHARACTER <nd_obj> (289) 60


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program <nd_obj> (44)
        on left: 1
        on right: 0
    entry <nd_obj> (45)
        on left: 2
        on right: 1
    datatype <nd_obj> (46)
        on left: 3 4 5 6
        on right: 2 29
    body <nd_obj> (47)
        on left: 7 8
        on right: 1 7 10 12 21
    block <nd_obj> (48)
        on left: 10 12 13 15 17
        on right: 7
    $@1 (49)
        on left: 9
        on right: 10
    $@2 (50)
        on left: 11
        on right: 12
    $@3 (51)
        on left: 14
        on right: 15
    $@4 (52)
        on left: 16
        on right: 17
    printparam <nd_obj> (53)
        on left: 18 19
        on right: 15
    else <nd_obj> (54)
        on left: 21 22
        on right: 12
    $@5 (55)
        on left: 20
        on right: 21
    condition <nd_obj> (56)
        on left: 23 25 27
        on right: 10 12
    $@6 (57)
        on left: 24
        on right: 25
    $@7 (58)
        on left: 26
        on right: 27
    statement <nd_obj> (59)
        on left: 29 31 33
        on right: 13
    $@8 (60)
        on left: 28
        on right: 29
    $@9 (61)
        on left: 30
        on right: 31
    $@10 (62)
        on left: 32
        on right: 33
    init <nd_obj2> (63)
        on left: 34 35
        on right: 29
    expression <nd_obj2> (64)
        on left: 36 37
        on right: 31 33 35 36 44
    term <nd_obj2> (65)
        on left: 38 39
        on right: 36 37 38
    factor <nd_obj2> (66)
        on left: 40 41 42
        on right: 38 39
    base <nd_obj2> (67)
        on left: 43 44
        on right: 40 42
    exponent <nd_obj> (68)
        on left: 45
        on right: 40
    mulops <nd_obj> (69)
        on left: 46 47
        on right: 38
    addops <nd_obj> (70)
        on left: 48 49
        on right: 36
    relop <nd_obj> (71)
        on left: 50 51 52 53 54 55
        on right: 23 33
    value <nd_obj2> (72)
        on left: 56 57 58
        on right: 41 43 61
    charbool <nd_obj2> (73)
        on left: 59 60
        on right: 34 62
    valcharbool <nd_obj2> (74)
        on left: 61 62
        on right: 18 23 66
    bools <nd_obj2> (75)
        on left: 63 64
        on right: 59
    return <nd_obj> (76)
        on left: 66 67
        on right: 1
    $@11 (77)
        on left: 65
        on right: 66


State 0

    0 $accept: • program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4

    program   go to state 5
    entry     go to state 6
    datatype  go to state 7


State 1

    3 datatype: INT •

    $default  reduce using rule 3 (datatype)


State 2

    4 datatype: FLOAT •

    $default  reduce using rule 4 (datatype)


State 3

    5 datatype: CHAR •

    $default  reduce using rule 5 (datatype)


State 4

    6 datatype: BOOL •

    $default  reduce using rule 6 (datatype)


State 5

    0 $accept: program • $end

    $end  shift, and go to state 8


State 6

    1 program: entry • '(' ')' '{' body return '}'

    '('  shift, and go to state 9


State 7

    2 entry: datatype • ID

    ID  shift, and go to state 10


State 8

    0 $accept: program $end •

    $default  accept


State 9

    1 program: entry '(' • ')' '{' body return '}'

    ')'  shift, and go to state 11


State 10

    2 entry: datatype ID •

    $default  reduce using rule 2 (entry)


State 11

    1 program: entry '(' ')' • '{' body return '}'

    '{'  shift, and go to state 12


State 12

    1 program: entry '(' ')' '{' • body return '}'

    PRINTFF  shift, and go to state 13
    SCANFF   shift, and go to state 14
    IF       shift, and go to state 15
    WHILE    shift, and go to state 16
    DECLARE  shift, and go to state 17
    ID       shift, and go to state 18

    $default  reduce using rule 8 (body)

    body       go to state 19
    block      go to state 20
    statement  go to state 21


State 13

   15 block: PRINTFF • $@3 '(' printparam ')' ';'

    $default  reduce using rule 14 ($@3)

    $@3  go to state 22


State 14

   17 block: SCANFF • $@4 '(' STR ',' '&' ID ')' ';'

    $default  reduce using rule 16 ($@4)

    $@4  go to state 23


State 15

   12 block: IF • $@2 '(' condition ')' '{' body '}' else

    $default  reduce using rule 11 ($@2)

    $@2  go to state 24


State 16

   10 block: WHILE • $@1 '(' condition ')' '{' body '}'

    $default  reduce using rule 9 ($@1)

    $@1  go to state 25


State 17

   29 statement: DECLARE • datatype ID $@8 init

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4

    datatype  go to state 26


State 18

   31 statement: ID • $@9 '=' expression
   33          | ID • $@10 relop expression

    '='       reduce using rule 30 ($@9)
    $default  reduce using rule 32 ($@10)

    $@9   go to state 27
    $@10  go to state 28


State 19

    1 program: entry '(' ')' '{' body • return '}'

    RETURN  shift, and go to state 29

    $default  reduce using rule 67 (return)

    return  go to state 30


State 20

    7 body: block • body

    PRINTFF  shift, and go to state 13
    SCANFF   shift, and go to state 14
    IF       shift, and go to state 15
    WHILE    shift, and go to state 16
    DECLARE  shift, and go to state 17
    ID       shift, and go to state 18

    $default  reduce using rule 8 (body)

    body       go to state 31
    block      go to state 20
    statement  go to state 21


State 21

   13 block: statement • ';'

    ';'  shift, and go to state 32


State 22

   15 block: PRINTFF $@3 • '(' printparam ')' ';'

    '('  shift, and go to state 33


State 23

   17 block: SCANFF $@4 • '(' STR ',' '&' ID ')' ';'

    '('  shift, and go to state 34


State 24

   12 block: IF $@2 • '(' condition ')' '{' body '}' else

    '('  shift, and go to state 35


State 25

   10 block: WHILE $@1 • '(' condition ')' '{' body '}'

    '('  shift, and go to state 36


State 26

   29 statement: DECLARE datatype • ID $@8 init

    ID  shift, and go to state 37


State 27

   31 statement: ID $@9 • '=' expression

    '='  shift, and go to state 38


State 28

   33 statement: ID $@10 • relop expression

    GTE  shift, and go to state 39
    LTE  shift, and go to state 40
    GT   shift, and go to state 41
    LT   shift, and go to state 42
    EQ   shift, and go to state 43
    NE   shift, and go to state 44

    relop  go to state 45


State 29

   66 return: RETURN • $@11 valcharbool ';'

    $default  reduce using rule 65 ($@11)

    $@11  go to state 46


State 30

    1 program: entry '(' ')' '{' body return • '}'

    '}'  shift, and go to state 47


State 31

    7 body: block body •

    $default  reduce using rule 7 (body)


State 32

   13 block: statement ';' •

    $default  reduce using rule 13 (block)


State 33

   15 block: PRINTFF $@3 '(' • printparam ')' ';'

    TRUE       shift, and go to state 48
    FALSE      shift, and go to state 49
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    STR        shift, and go to state 53
    CHARACTER  shift, and go to state 54

    printparam   go to state 55
    value        go to state 56
    charbool     go to state 57
    valcharbool  go to state 58
    bools        go to state 59


State 34

   17 block: SCANFF $@4 '(' • STR ',' '&' ID ')' ';'

    STR  shift, and go to state 60


State 35

   12 block: IF $@2 '(' • condition ')' '{' body '}' else

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    CHARACTER  shift, and go to state 54

    condition    go to state 63
    value        go to state 56
    charbool     go to state 57
    valcharbool  go to state 64
    bools        go to state 59


State 36

   10 block: WHILE $@1 '(' • condition ')' '{' body '}'

    TRUE       shift, and go to state 61
    FALSE      shift, and go to state 62
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    CHARACTER  shift, and go to state 54

    condition    go to state 65
    value        go to state 56
    charbool     go to state 57
    valcharbool  go to state 64
    bools        go to state 59


State 37

   29 statement: DECLARE datatype ID • $@8 init

    $default  reduce using rule 28 ($@8)

    $@8  go to state 66


State 38

   31 statement: ID $@9 '=' • expression

    LOG        shift, and go to state 67
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    expression  go to state 69
    term        go to state 70
    factor      go to state 71
    base        go to state 72
    value       go to state 73


State 39

   53 relop: GTE •

    $default  reduce using rule 53 (relop)


State 40

   52 relop: LTE •

    $default  reduce using rule 52 (relop)


State 41

   51 relop: GT •

    $default  reduce using rule 51 (relop)


State 42

   50 relop: LT •

    $default  reduce using rule 50 (relop)


State 43

   54 relop: EQ •

    $default  reduce using rule 54 (relop)


State 44

   55 relop: NE •

    $default  reduce using rule 55 (relop)


State 45

   33 statement: ID $@10 relop • expression

    LOG        shift, and go to state 67
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    expression  go to state 74
    term        go to state 70
    factor      go to state 71
    base        go to state 72
    value       go to state 73


State 46

   66 return: RETURN $@11 • valcharbool ';'

    TRUE       shift, and go to state 48
    FALSE      shift, and go to state 49
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    CHARACTER  shift, and go to state 54

    value        go to state 56
    charbool     go to state 57
    valcharbool  go to state 75
    bools        go to state 59


State 47

    1 program: entry '(' ')' '{' body return '}' •

    $default  reduce using rule 1 (program)


State 48

   63 bools: TRUE •

    $default  reduce using rule 63 (bools)


State 49

   64 bools: FALSE •

    $default  reduce using rule 64 (bools)


State 50

   56 value: NUMBER •

    $default  reduce using rule 56 (value)


State 51

   57 value: FLOAT_NUM •

    $default  reduce using rule 57 (value)


State 52

   58 value: ID •

    $default  reduce using rule 58 (value)


State 53

   19 printparam: STR •

    $default  reduce using rule 19 (printparam)


State 54

   60 charbool: CHARACTER •

    $default  reduce using rule 60 (charbool)


State 55

   15 block: PRINTFF $@3 '(' printparam • ')' ';'

    ')'  shift, and go to state 76


State 56

   61 valcharbool: value •

    $default  reduce using rule 61 (valcharbool)


State 57

   62 valcharbool: charbool •

    $default  reduce using rule 62 (valcharbool)


State 58

   18 printparam: valcharbool •

    $default  reduce using rule 18 (printparam)


State 59

   59 charbool: bools •

    $default  reduce using rule 59 (charbool)


State 60

   17 block: SCANFF $@4 '(' STR • ',' '&' ID ')' ';'

    ','  shift, and go to state 77


State 61

   25 condition: TRUE • $@6
   63 bools: TRUE •

    ')'       reduce using rule 24 ($@6)
    $default  reduce using rule 63 (bools)

    $@6  go to state 78


State 62

   27 condition: FALSE • $@7
   64 bools: FALSE •

    ')'       reduce using rule 26 ($@7)
    $default  reduce using rule 64 (bools)

    $@7  go to state 79


State 63

   12 block: IF $@2 '(' condition • ')' '{' body '}' else

    ')'  shift, and go to state 80


State 64

   23 condition: valcharbool • relop valcharbool

    GTE  shift, and go to state 39
    LTE  shift, and go to state 40
    GT   shift, and go to state 41
    LT   shift, and go to state 42
    EQ   shift, and go to state 43
    NE   shift, and go to state 44

    relop  go to state 81


State 65

   10 block: WHILE $@1 '(' condition • ')' '{' body '}'

    ')'  shift, and go to state 82


State 66

   29 statement: DECLARE datatype ID $@8 • init

    '='  shift, and go to state 83

    init  go to state 84


State 67

   41 factor: LOG • '(' value ',' value ')'

    '('  shift, and go to state 85


State 68

   44 base: '(' • expression ')'

    LOG        shift, and go to state 67
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    expression  go to state 86
    term        go to state 70
    factor      go to state 71
    base        go to state 72
    value       go to state 73


State 69

   31 statement: ID $@9 '=' expression •
   36 expression: expression • addops term

    ADD       shift, and go to state 87
    SUBTRACT  shift, and go to state 88

    $default  reduce using rule 31 (statement)

    addops  go to state 89


State 70

   37 expression: term •
   38 term: term • mulops factor

    MULTIPLY  shift, and go to state 90
    DIVIDE    shift, and go to state 91

    $default  reduce using rule 37 (expression)

    mulops  go to state 92


State 71

   39 term: factor •

    $default  reduce using rule 39 (term)


State 72

   40 factor: base • exponent base
   42       | base •

    POW  shift, and go to state 93

    $default  reduce using rule 42 (factor)

    exponent  go to state 94


State 73

   43 base: value •

    $default  reduce using rule 43 (base)


State 74

   33 statement: ID $@10 relop expression •
   36 expression: expression • addops term

    ADD       shift, and go to state 87
    SUBTRACT  shift, and go to state 88

    $default  reduce using rule 33 (statement)

    addops  go to state 89


State 75

   66 return: RETURN $@11 valcharbool • ';'

    ';'  shift, and go to state 95


State 76

   15 block: PRINTFF $@3 '(' printparam ')' • ';'

    ';'  shift, and go to state 96


State 77

   17 block: SCANFF $@4 '(' STR ',' • '&' ID ')' ';'

    '&'  shift, and go to state 97


State 78

   25 condition: TRUE $@6 •

    $default  reduce using rule 25 (condition)


State 79

   27 condition: FALSE $@7 •

    $default  reduce using rule 27 (condition)


State 80

   12 block: IF $@2 '(' condition ')' • '{' body '}' else

    '{'  shift, and go to state 98


State 81

   23 condition: valcharbool relop • valcharbool

    TRUE       shift, and go to state 48
    FALSE      shift, and go to state 49
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    CHARACTER  shift, and go to state 54

    value        go to state 56
    charbool     go to state 57
    valcharbool  go to state 99
    bools        go to state 59


State 82

   10 block: WHILE $@1 '(' condition ')' • '{' body '}'

    '{'  shift, and go to state 100


State 83

   34 init: '=' • charbool
   35     | '=' • expression

    LOG        shift, and go to state 67
    TRUE       shift, and go to state 48
    FALSE      shift, and go to state 49
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    CHARACTER  shift, and go to state 54
    '('        shift, and go to state 68

    expression  go to state 101
    term        go to state 70
    factor      go to state 71
    base        go to state 72
    value       go to state 73
    charbool    go to state 102
    bools       go to state 59


State 84

   29 statement: DECLARE datatype ID $@8 init •

    $default  reduce using rule 29 (statement)


State 85

   41 factor: LOG '(' • value ',' value ')'

    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52

    value  go to state 103


State 86

   36 expression: expression • addops term
   44 base: '(' expression • ')'

    ADD       shift, and go to state 87
    SUBTRACT  shift, and go to state 88
    ')'       shift, and go to state 104

    addops  go to state 89


State 87

   48 addops: ADD •

    $default  reduce using rule 48 (addops)


State 88

   49 addops: SUBTRACT •

    $default  reduce using rule 49 (addops)


State 89

   36 expression: expression addops • term

    LOG        shift, and go to state 67
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    term    go to state 105
    factor  go to state 71
    base    go to state 72
    value   go to state 73


State 90

   46 mulops: MULTIPLY •

    $default  reduce using rule 46 (mulops)


State 91

   47 mulops: DIVIDE •

    $default  reduce using rule 47 (mulops)


State 92

   38 term: term mulops • factor

    LOG        shift, and go to state 67
    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    factor  go to state 106
    base    go to state 72
    value   go to state 73


State 93

   45 exponent: POW •

    $default  reduce using rule 45 (exponent)


State 94

   40 factor: base exponent • base

    NUMBER     shift, and go to state 50
    FLOAT_NUM  shift, and go to state 51
    ID         shift, and go to state 52
    '('        shift, and go to state 68

    base   go to state 107
    value  go to state 73


State 95

   66 return: RETURN $@11 valcharbool ';' •

    $default  reduce using rule 66 (return)


State 96

   15 block: PRINTFF $@3 '(' printparam ')' ';' •

    $default  reduce using rule 15 (block)


State 97

   17 block: SCANFF $@4 '(' STR ',' '&' • ID ')' ';'

    ID  shift, and go to state 108


State 98

   12 block: IF $@2 '(' condition ')' '{' • body '}' else

    PRINTFF  shift, and go to state 13
    SCANFF   shift, and go to state 14
    IF       shift, and go to state 15
    WHILE    shift, and go to state 16
    DECLARE  shift, and go to state 17
    ID       shift, and go to state 18

    $default  reduce using rule 8 (body)

    body       go to state 109
    block      go to state 20
    statement  go to state 21


State 99

   23 condition: valcharbool relop valcharbool •

    $default  reduce using rule 23 (condition)


State 100

   10 block: WHILE $@1 '(' condition ')' '{' • body '}'

    PRINTFF  shift, and go to state 13
    SCANFF   shift, and go to state 14
    IF       shift, and go to state 15
    WHILE    shift, and go to state 16
    DECLARE  shift, and go to state 17
    ID       shift, and go to state 18
